Freestyle ID user decrement error #48045

Closed
opened 2016-04-04 14:11:12 +02:00 by Markku Åkerblom · 9 comments

System Information
OSX 10.11.3
Intel HD Graphics 3000 512 MB

Blender Version
Broken: 2.77
Worked: 2.76b

Short description of error
Rendering with Freestyle enabled and Edge types set to Edge Mark produces error in console when object contains disconnected Freestyle edges.

Exact steps for others to reproduce the error
Attached scene contains two scenes both with a single plane. The plane in the "disconnected" scene has two freestyle marked edges and they are disconnected. Rendering this scene produces the following error in the console:

ID user decrement error: MAstroke_material (from '[Main]'): 0 <= 0

The error does not appear in the "connected" scene where an additional edge is marked as a freestyle edge. However, if Chaining is disabled in the Freestyle Line Style panel, the same error occurs.

Despite the error, edges seem to be rendered correctly in these two scenes. However, in a more complex scene I'm missing some of the freestyle marked edges in the render. I cannot be sure this is related to this bug, though.

freestyle_bug.blend

**System Information** OSX 10.11.3 Intel HD Graphics 3000 512 MB **Blender Version** Broken: 2.77 Worked: 2.76b **Short description of error** Rendering with Freestyle enabled and Edge types set to Edge Mark produces error in console when object contains disconnected Freestyle edges. **Exact steps for others to reproduce the error** Attached scene contains two scenes both with a single plane. The plane in the "disconnected" scene has two freestyle marked edges and they are disconnected. Rendering this scene produces the following error in the console: ID user decrement error: MAstroke_material (from '[Main]'): 0 <= 0 The error does not appear in the "connected" scene where an additional edge is marked as a freestyle edge. However, if Chaining is disabled in the Freestyle Line Style panel, the same error occurs. Despite the error, edges seem to be rendered correctly in these two scenes. However, in a more complex scene I'm missing some of the freestyle marked edges in the render. I cannot be sure this is related to this bug, though. [freestyle_bug.blend](https://archive.blender.org/developer/F300709/freestyle_bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @akerblom

Added subscriber: @akerblom

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-04-04 15:06:17 +02:00

Can confirm the issue… Note that this is more a warning that a real error - yet it should not happen (changes were made recently in how ID usercount is managed, we are now much stricter on this aspect, but it means some areas still need fixing…).

Can confirm the issue… Note that this is more a warning that a real error - yet it should not happen (changes were made recently in how ID usercount is managed, we are now much stricter on this aspect, but it means some areas still need fixing…).

This issue was referenced by d82d9e14e8

This issue was referenced by d82d9e14e8194f2594718276bcc7bde415323344

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @poweruserm

Added subscriber: @poweruserm
  • I just wanted to add the comment that I have been encountering this notification error too.
    It occurs in image and animation render. In may occur during baking.
    However, during command line animation render, it occurs far too much,
    and takes away computation time between finishing one frame and starting the next.
- I just wanted to add the comment that I have been encountering this notification error too. It occurs in image and animation render. In may occur during baking. However, during command line animation render, it occurs far too much, and takes away computation time between finishing one frame and starting the next.

@poweruserm: Please make a new report, following our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

@poweruserm: Please make a new report, following our submission template and guidelines and make a complete, valid bug report, with required info, precise description of the issue, precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48045
No description provided.